--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-intl": "^2.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
